Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-77854

QFont::setStretch ignored after calling QFont::setStyleName

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 6.3.0 Alpha
    • 5.12.4
    • GUI: Text handling
    • None
    • Fedora 29
    • Linux/X11
    • ae10084ef9d9db5f32cc9d42ab7e485d0a896d78 (qt/qtbase/dev)

      QFont::setStretch is ignored and has no effect following any call to QFont::setStyleString.

       

      Eg..

        QLabel *l = new QLabel();
        QFont f;
        f.setFamily( "Serif" );
        f.setStyleName( "Bold" );
        f.setStretch( 400 );
        l->setFont( f );
        l->setText( "test" );
        l->show();
      

      Will ignore the stretch setting, while commenting out the "setStyleName" call will correctly show the stretched text.

        1. screenshot-1.png
          68 kB
          Nyall Dawson
        For Gerrit Dashboard: QTBUG-77854
        # Subject Branch Project Status CR V

            esabraha Eskil Abrahamsen Blomfeldt
            ndawson Nyall Dawson
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes